syntax = "proto3";

package proto;

option java_package = "boston.mqtt.model";
option java_outer_classname = "AmsSyncAckProto";

message AmsSyncAck {
   string clientId = 1;
   bool received = 2;
}
