syntax = "proto3";

package proto;

option java_package = "boston.mqtt.model";
option java_outer_classname = "UserSyncRequestProto";

message UserSyncRequest {
   string clientId = 1;
}
